test/parser.d/invalid/typedef-unit-1.souc.bad
import whatever

def unit Unit = { Unit Unit1 }
